added more more functionality

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import './sass/variables';
 @import './sass/main';
 @import './sass/mixins';
+@import './sass/modal';
 @import './sass/utility.scss';
 @import './sass/App.scss';
 @import './sass/reservation/scheduling';
