--- a/src/sass/_App.scss
+++ b/src/sass/_App.scss
@@ -3,10 +3,26 @@
   min-height: 100vh;
   display: grid;
   grid-template-columns: 15% 85%;
+  
+  @media only screen and (max-width: $large){
+    grid-template-columns: 23% 77%;
+  }
+
+  @media only screen and (max-width: $medium){
+    grid-template-columns: 100%;
+  }
 }
 
 .content{
   background-color: $color-grey-light;
   width: 100%;
   padding: 1rem 2rem;
+
+  @media only screen and (max-width: $medium){
+    display: flex;
+    justify-content: center;
+  }
+  @media only screen and (max-width: $small){
+    padding: 1rem .5rem;
+  }
 }
