--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,8 +7,8 @@ $color-neutral-400: #d4d4d4;
 $color-orange-400: #ea580c;
 $color-green-400: #059669;
 
-$largest: 96em;
-$large: 75em;
-$medium: 56.25em;
-$small: 40em;
-$smallest: 22em;
+$largest: 96em;//1536px
+$large: 75em;//1200px
+$medium: 56.25em;//900px
+$small: 40em;//640em
+$smallest: 22em;//352px
