--- a/src/sass/reservation/_scheduling.scss
+++ b/src/sass/reservation/_scheduling.scss
@@ -205,6 +205,11 @@
     display: flex;
     gap: 2.5rem;
     align-items: center;
+
+    @media only screen and (max-width: $small){
+      flex-direction: column;
+      gap: 1.5rem;
+    }
     
     .select{
       display: flex;
