--- a/src/sass/_App.scss
+++ b/src/sass/_App.scss
@@ -1,8 +1,9 @@
 .container {
   max-width: $largest;
-  min-height: 100vh;
   display: grid;
+  margin: 0 auto;
   grid-template-columns: 15% 85%;
+    overflow: hidden;
   
   @media only screen and (max-width: $large){
     grid-template-columns: 23% 77%;
