--- a/src/sass/_utility.scss
+++ b/src/sass/_utility.scss
@@ -121,3 +121,10 @@ a{
     background-color: lighten($color: $color-primary, $amount: 10);
   }
 }
+
+.adjust{
+  @media only screen and (max-width: $small){
+    margin-top: 5rem;
+    text-align: center;
+  }
+}
