--- a/src/sass/reservation/_scheduling.scss
+++ b/src/sass/reservation/_scheduling.scss
@@ -92,6 +92,18 @@
       background-color: transparent;
       transition: all .3s;
       @include remove-underline;
+      position: relative;
+
+      .red--spot{
+        display: block;
+        width: 5px;
+        height: 5px;
+        background-color: red;
+        border-radius: 50%;
+        position: absolute;
+        left: 1.5rem;
+        top: .2rem;
+      }
 
       &:hover{
         @include hoverDarken($color-grey-light);
@@ -120,9 +132,6 @@
 
   h1{
     width: max-content;
-    @media only screen and (max-width: $large){
-      // order: 1;
-    }
   }
 
   .metrics-container{
@@ -197,6 +206,10 @@
   padding-left: 1rem;
   padding-top: 1rem;
 
+  @media only screen and (max-width: $medium){
+    padding-left: 0.2rem;
+  }
+
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -263,7 +276,6 @@
 
   &--main{
     width: 100%;
-    margin-bottom: 5rem;
 
     .main--title{
       display: flex;
@@ -286,7 +298,6 @@
       @media only screen and (max-width: $large){
         flex-direction: column;
         gap: 2rem;
-        // justify-content: center;
       }
 
       &--display{
@@ -299,18 +310,42 @@
           margin: 0 auto;
         }
       }
-
+      .calender--cover{
+        width: 75%;
+        background-color: $color-white;
+      }
       &--table{
         width: 75%;
         border-radius: .3rem;
         border: .15rem $color-neutral-400 solid;
         background-color: $color-white;
-        display: flex;
-        align-items: start;
-        overflow: scroll;
+        overflow: auto;
+        position: relative;
+        padding-bottom: 20rem;
+
+        &::before {
+            content: '';
+            position: absolute;
+            left: 12rem;
+            top: 0;
+            width: 2px;
+            bottom: 0;
+            background-color: $color-neutral-400;
+            @media only screen and (max-width: $medium) {
+              left: 11rem;
+            }
+          }
 
         @media only screen and (max-width: $large) {
           width: 100%;
+        }
+
+        .first--column {
+          width: 12rem;
+
+          @media only screen and (max-width: $medium){
+            width: 11rem;
+          }
         }
 
         #schedule-table {
@@ -326,20 +361,12 @@
             border-bottom: 2px $color-neutral-400 solid;
             height: 3.2rem;
             font-weight: 700;
-            // width: max-content;
             padding: .5rem .5rem;
-            // font-size: 0.7rem;
-            &:first-of-type{
-              width: 25%;
-              // width: 12rem;
-              border-right: 2px $color-neutral-400 solid;
-            }
           }
 
           & td{
             font-size: .7rem;
             text-align: center;
-            // padding: 1rem .2rem;
           }
 
           & tbody{
@@ -354,26 +381,23 @@
             display: flex;
             padding: .5rem;
             gap: .5rem;
-            width: 12rem;
-            border-right: 2px $color-neutral-400 solid;
-            
-            // background-color: red;
-            // width: 100%;
 
             &>img{
               height: 3rem;
-              // display: block;
-              // margin-right: .5rem;
+              display: block;
+              @media only screen and (max-width: $large){
+                height: 2.5rem;
+              }
+              @media only screen and (max-width: $medium){
+                height: 2rem;
+              }
             }
-
-
 
             & p{
               text-align: start;
             }
 
           }
-      
         }
       }
     }
