--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -26,3 +26,23 @@
     box-shadow: 0 0 10px $color-primary;
   }
 }
+
+@mixin hamburg{
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  outline: none;
+  border: none;
+
+  & svg {
+    color: $color-primary;
+    font-size: 1.5rem;
+  }
+
+  @media only screen and (max-width: $medium) {
+    display: block;
+  }
+}
