--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -17,5 +17,25 @@
     opacity: 1;
     z-index: 100;
   }
+}
 
+.schedule--modal {
+  visibility: hidden;
+  opacity: 0;
+  top: -2px;
+  height: 0;
+  width: 100%;
+
+  // @media only screen and (max-width: $medium) {
+    background-color: rgba(black, .9);
+    position: fixed;
+    height: 120%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+
+    visibility: visible;
+    opacity: 1;
+    z-index: 100;
+  // }
 }
