--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -1,24 +1,7 @@
 
 .hamburger{
   display: none;
-  width: 3rem;
-  height: 3rem;
-  border-radius: 50%;
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  outline: none;
-  border: none;
-
-  & svg{
-    color: $color-primary;
-    font-size: 1.5rem;
-  }
-  @media only screen and (max-width: $medium){
-    display: block;
-  }
-
-
+  @include hamburg;
 }
 
 .sidebar{
