--- a/src/sass/reservation/_scheduling.scss
+++ b/src/sass/reservation/_scheduling.scss
@@ -416,10 +416,14 @@
 
 .schedule--detail{
   width: 30rem;
-  min-height: 70vh;
+  min-height: 90vh;
   background-color: $color-white;
   margin: 1rem auto;
   border-radius: 8px;
+
+  @media only screen and (max-width: $small){
+    width: 90vw;
+  }
   hr {
       border: 1px solid $color-grey-dark;
     }
@@ -434,6 +438,9 @@
 
       &>h1{
         font-size: 1.5rem;
+        @media only screen and (max-width: $small) {
+          font-size: 1rem;
+        }
       }
       &__icons{
         display: flex;
