--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -20,22 +20,9 @@
 }
 
 .schedule--modal {
-  visibility: hidden;
-  opacity: 0;
-  top: -2px;
-  height: 0;
+  top: 0;
   width: 100%;
-
-  // @media only screen and (max-width: $medium) {
-    background-color: rgba(black, .9);
-    position: fixed;
-    height: 120%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-
-    visibility: visible;
-    opacity: 1;
-    z-index: 100;
-  // }
+  background-color: rgba(black, .9);
+  position: fixed;
+  height: 100vh;
 }
