--- a/src/sass/reservation/_scheduling.scss
+++ b/src/sass/reservation/_scheduling.scss
@@ -135,8 +135,7 @@
   }
 
   .metrics-container{
-    width: 70%;
-    height: 100%;
+    width: fit-content;
     border-radius: .3rem;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.2), 0 2px 4px -2px rgb(0 0 0 / 0.2);
     padding: 0.25rem;
@@ -144,29 +143,33 @@
     grid-template-columns: repeat(5, 1fr) 2fr;
     grid-gap: .1rem;
     
-    @media only screen and (max-width: $large){
-      width: 100%;
-      order: -1;
+    @media only screen and (max-width: 61rem){
+      grid-template-columns: repeat(3, minmax(73px, 115px));
+      gap: .3rem;
     }
-    
     @media only screen and (max-width: $small){
-      grid-template-columns: 1fr 1fr;
-      gap: 1rem;
+      grid-template-columns: repeat(2, minmax(73px, 115px));
     }
-    @media only screen and (max-width: $smallest){
-      grid-template-columns: 1fr;
-      gap: 1rem;
-    }
-
 
     .metric{
-      height: 100%;
+      // height: 100%;
+      height: 76px;
       background-size: cover;
       background-repeat: no-repeat;
     }
 
     .large-metric{
       display: flex;
+      // width: 12.5rem;
+      @media only screen and (max-width: 970px){
+        grid-row: 3 / span 1;
+        grid-column: 1 / span 2;
+      }
+      @media only screen and (max-width: $small){
+        grid-row: 4 / span 1;
+        grid-column: 1 / span 2;
+      }
+
       &>*{
         width: 50%;
       }
@@ -309,6 +312,11 @@
           width: max-content;
           margin: 0 auto;
         }
+
+        @media only screen and (max-width: $large){
+          width: 90%;
+          margin: 0 auto;
+        }
       }
       .calender--cover{
         width: 75%;
@@ -334,6 +342,9 @@
             @media only screen and (max-width: $medium) {
               left: 11rem;
             }
+            @media only screen and (max-width: $small) {
+              left: 10rem;
+            }
           }
 
         @media only screen and (max-width: $large) {
@@ -345,6 +356,9 @@
 
           @media only screen and (max-width: $medium){
             width: 11rem;
+          }
+          @media only screen and (max-width: $small){
+            width: 10rem;
           }
         }
 
