fixed 5th metric item bug

--- a/src/sass/reservation/_metricComponent.scss
+++ b/src/sass/reservation/_metricComponent.scss
@@ -9,9 +9,11 @@
     font-size: 0.6rem;
   }
 
-  &:nth-of-type(5){
-    position: relative;
-    left: 50%;
+  @media only screen and (max-width: $small){
+    &:nth-of-type(5){
+      position: relative;
+      left: 50%;
+    }
   }
 
   .metric-amount{
