--- a/src/sass/reservation/_scheduling.scss
+++ b/src/sass/reservation/_scheduling.scss
@@ -378,8 +378,10 @@
             text-align: center;
             padding: 0.5rem;
             
-            &:not(:first-of-type){
-              width: 7rem;
+            &:first-of-type{
+              height: 4.5rem;
+              display: flex;
+              align-items: center;
             }
           }
 
